<resources>
    <string name="zero" translatable="false">0</string>
    <string name="app_name">The counter of la Roulotte</string>
    <string name="banderole">Bande</string>
    <string name="project">Project</string>
    <string name="project_image" translatable="false">Picture of a project</string>
    <string name="project_name">Name of the project</string>
    <string name="project_name_id">Name of the project:</string>
    <string name="counter_name">Name of the counter</string>
    <string name="counter_name_id">Name of the counter:</string>
    <string name="counter_state">State of the counter</string>
    <string name="counter_state_id">State of the counter:</string>
    <string name="counter_max">Maximum of the counter</string>
    <string name="counter_max_id">Maximum of the counter:</string>
    <string name="counter_tours">Round of the counter</string>
    <string name="counter_tours_id">Round of the counter:</string>
    <string name="counter_attach_main">Attached to project</string>
    <string name="counter_attach_main_id">Attached to project:</string>
    <string name="counter_attached">Attach another counter</string>
    <string name="counter_attached_id">Attach another counter:</string>
    <string name="counter_position">Position of the counter</string>
    <string name="counter_position_id">Position of the counter:</string>
    <string name="notes_image">Picture of notes</string>
    <string name="counter_image" translatable="false">Picture of a counter</string>
    <string name="main_counter_image">Picture of the main counter</string>
    <string name="count_of_counter">Count of the counter</string>
    <string name="delete_project">Delete the project?</string>
    <string name="delete_counter">Are you sure you want to delete the counter?</string>
    <string name="problem_etat_nul">Detach the counter of the main counter to continue</string>
    <string name="counter_already">You have already a counter with this name</string>
    <string name="project_already">You have already a project with this name</string>
    <string name="modif">You have modified:</string>
    <string name="sure_to_modif">Do you want to save the changes?</string>
    <string name="confirm">Confirmation</string>
    <string name="max_condition">The maximum must be 0 or more!</string>
    <string name="warning">Warning</string>
    <string name="my_rules">My rules</string>
    <string name="my_comments">My comments</string>
    <string name="start_now">Begin from actual row ?</string>
    <string name="start_other">Or from row number:</string>
    <string name="pre_comment">Do you want to add this comment in the project?</string>
    <string name="pre_comment_modif">Do you want to modify this comment?</string>
    <string name="rule">Rule</string>
    <string name="augmentation">Incrementing</string>
    <string name="diminution">Decrementing</string>
    <string name="rule_text1">"times each "</string>
    <string name="rows">"rows "</string>
    <string name="stitch">stitches</string>
    <string name="step">Step</string>
    <string name="andthen">And then</string>
    <string name="from_row">from row</string>
    <string name="pre_rule">Do you want to add this rule in the project?</string>
    <string name="pre_rule_modif">Do you want to modify this rule?</string>
    <string name="delete_rule">Are you sure you want to delete this rule?</string>
    <string name="delete_step">Are you sure you want to delete this step?</string>
    <string name="info">Info</string>
    <string name="more_info_step">Click on the image for more information</string>
    <string name="help_max">If you want the counter to loop, you can set a maximum. After reaching this maximum, the counter will come back to 1. If you don\'t want any maximum, you have to write 0.</string>
    <string name="help_tours">The number "round" is the number of time this counter has looped if you have set a maximum just above.</string>
    <string name="help_position">The position of the counter is used uniquely in the display of the project. 1 to be the first counter and x to be the xth counter.</string>
    <string name="help_attach">If you mark the box, this counter will change with the counter of the project. Each time you increment/decrement this counter or the counter of the project, they both will change.</string>
    <string name="help_attached">If you choose another counter here, the counter chosen will increment each time this counter loop and come back to 1.</string>
    <string name="help_start">If you mark the bax, the rule will start from the current state of the project, if you don\'t mark it, you have to enter a number just below to say when it has to start.</string>
    <string name="help_step">If you mark the box of the step, the step will be an incrementing one, orelse it will be a decrementing one.</string>
    <string name="help_which_counter">The rule will be applied on the counter you indicate here. If you select "the project", the rule will follow the main counter.</string>
    <string name="help_comment_rule">The comment will be added to the text appearing in the reminder.</string>
    <string name="add_project">Add a project</string>
    <string name="add_counter">Add a counter</string>
    <string name="add_rule">Add a rule</string>
    <string name="add_comment">Add a comment</string>
    <string name="edit_notes">Edit notes</string>
    <string name="edit_rules">Edit rules</string>
    <string name="parameter_image">Parameters</string>
    <string name="linked_image" translatable="false">Linked image</string>
    <string name="delete_image" translatable="false">Delete</string>
    <string name="info_image" translatable="false">Info</string>
    <string name="button_minus" translatable="false">-</string>
    <string name="button_plus" translatable="false">+</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="none" translatable="false">None</string>
    <string name="yes">Yes</string>
    <string name="ok" translatable="false">OK</string>
    <string name="nothing_changed">Nothing has changed</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="home">Home</string>
    <string name="my_counters">My counters</string>
    <string name="counter">Counter: </string>
    <string name="which_counter_rule">Bind this rule to</string>
    <string name="which_counter_comment">Bind this comment to</string>
    <string name="the_project">the project</string>
    <string name="of">of</string>
    <string name="stitches">stitches</string>
    <string name="comment_this">Comment this rule</string>
    <string name="a_comment">A comment</string>
    <string name="counter_comment">Comment of the counter</string>
    <string name="open_a_counter">Open a counter</string>
    <string name="to_row">to row</string>
    <string name="delete_comment">Are you sure you want to delete this comment?</string>
    <string name="comment">Comment</string>
    <string name="on_main">Bound to the project</string>
    <string name="on_counter">Bound to the counter: </string>
    <string name="clone_proj">Clone the project</string>
    <string name="with_data">Copy also states of counters?</string>
    <string name="AboutTitle">About</string>
    <string name="AboutText">This application was developed by\nLuis Tascon Gutierrez\nwith the advice of\nAlexandra Point\nand the shop\n\'<a href="http://www.laroulotteauxpelotes.be">La roulotte aux pelotes</a>\'. \n\nThis is an open source project, you can find it on <a href="https://github.com/TGLuis/compteurDeLaRoulotte">Github</a>.\n\n Feel free to give your opinion on the <a href="https://play.google.com/store/apps/details?id=lufra.lecompteurdelaroulotte">PlayStore</a> or to collaborate on <a href="https://github.com/TGLuis/compteurDeLaRoulotte">Github</a>.</string>
    <string name="HelpTitle">Help</string>
    <string name="drop">Drop button</string>
    <string name="help_general_title">General help</string>
    <string name="help_general">This application aim to simplify a knit project. You can create a project in the home screen. Once you are in a project, you can add counters, rules and comments that will help you manage your project.</string>
    <string name="help_counter_title">Counter</string>
    <string name="help_counter">Each counter has a name which is unique per project. It has a state, which represents the number of rows you have currently made with this counter.</string>
    <string name="help_comment_title">Comment</string>
    <string name="help_comment">For your project you can also have comments. These comments are described by a counter (or the project), a starting and an ending row, with a text. Once the counter indicated has as state a row which is in the interval described before, the text of the comment will appear in your project below your counter (or the project).</string>
    <string name="help_rule_title">Rule</string>
    <string name="help_rule">The rule is a manner to automatise some comments. In some project, you will have to do incrementation and decrementation. You can encode this to have a pop up every time a row is reached. For this, you will have to choose the counter on which you bind the rule. You choose the starting row, it can be the current row of the counter you chose. And you can optionally add a comment. Then you can add as many steps as you want. A step is in the format "X times each Y rows Z tiches" it means that it will warn you to increment (or decrement if you did not check the box) Z tiches each Y rows and all this X times. The steps have an order and follows one after another.</string>
    <string name="parameters">Settings</string>
    <string name="screen_on">Keep screen on</string>
    <string name="volume_on">Sound when + and - buttons pressed</string>
    <string name="archived">Archived</string>
    <string name="archives">Archives</string>
    <string name="archive_image" translatable="false">Image archive</string>
    <string name="unarchive_image" translatable="false">Image unarchive</string>
    <string name="archive_project">Archive the project?</string>
    <string name="unarchive_project">Restore project?</string>
    <string name="state_not_valid">The state of the counter is not valid</string>
    <string name="max_not_valid">Maximum of the counter is not valid</string>
    <string name="position_not_valid">Position of the counter is not valid</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="open_pdf">Open a PDF</string>
    <string name="close_pdf">Close the PDF</string>
    <string name="save_pdf">Save the PDF in the project</string>
    <string name="row_number">ROW number</string>
    <string name="message">MESSAGE:</string>
    <string name="problem_with_pdf">There was a problem while trying to open the pdf</string>
    <string name="open_new_pdf">Open a new PDF</string>
    <string name="hide_pdf">Hide PDF</string>
    <string name="show_pdf">Show PDF</string>
    <string name="language">Language</string>
    <string name="tools">Tools</string>
    <string name="ToolsTitle">Available tools</string>
    <string name="ToolsConvertorBtn">Converter</string>
    <string name="conv_length_value_1_autofill_hint">0 cm</string>
    <string name="converter_length_value_1_descr">First length value to convert from</string>
    <string name="converter_length_value_2_descr">Second length value to convert from</string>
    <string name="converter_length_value_1_hint">First value</string>
    <string name="converter_length_value_2_hint">Second value</string>
    <string name="converter_arrow_descr">Conversion direction</string>
    <string name="NumberDefaultValue">0</string>
</resources>