<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/andthen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/andthen"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/text_augm_or_dim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/augmentation"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <CheckBox
                android:id="@+id/augm_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_line">

            <EditText
                android:id="@+id/enter_fois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/NumberDefaultValue"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="30dp"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_normal"
                android:nextFocusDown="@id/enter_rows"/>

            <TextView
                android:id="@+id/rule_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule_text1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <EditText
                android:id="@+id/enter_rows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/NumberDefaultValue"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="30dp"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_normal"
                android:nextFocusDown="@id/enter_stitches"/>

            <TextView
                android:id="@+id/text_rows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rows"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <EditText
                android:id="@+id/enter_stitches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/NumberDefaultValue"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minWidth="30dp"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_normal"
                android:nextFocusDown="@id/enter_fois"/>

            <TextView
                android:id="@+id/text_stitches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stitch"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/delete_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/left"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_outline_24" />

</androidx.constraintlayout.widget.ConstraintLayout>