<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_test">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="@id/button_add_project"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/project_name_id"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_margin="5dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/mauve"
            android:hint="@string/project_name"
            android:inputType="text"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_add_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/add_project"
        android:textColor="@color/black"
        android:theme="@style/ButtonStyle"
        />

</android.support.constraint.ConstraintLayout>