<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:id="@+id/project_image"
            android:scaleType="fitXY"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/icon_project"
            android:contentDescription="@string/project_image"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/project_text"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/mauve"
            android:text="@string/project"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/project_image"
            app:layout_constraintRight_toLeftOf="@id/unarchive_image"/>
        <ImageButton
            android:id="@+id/unarchive_image"
            android:scaleType="fitXY"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/image_unarchive"
            android:contentDescription="@string/unarchive_image"
            android:layout_marginEnd="10dp"
            android:background="#00000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete_image" />
        <ImageButton
            android:id="@+id/delete_image"
            android:scaleType="fitXY"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/image_trash"
            android:contentDescription="@string/delete_image"
            android:layout_marginEnd="10dp"
            android:background="#00000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/jaune"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
