<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_test">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/parameter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/title_parameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameters"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/screen_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/title_parameter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/text_screen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/screen_on"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <CheckBox
                android:id="@+id/check_box_screen_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/volume_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/screen_on"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/text_volume"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/volume_on"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <CheckBox
                android:id="@+id/check_box_volume_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <!-- Language -->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/volume_buttons"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/text_language"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/language"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <!-- buttons -->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/language"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonStyleDark"
                android:text="@string/cancel"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/button_save"/>

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ButtonStyleDark"
                android:text="@string/save"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/button_cancel"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
